--- a/article.html
+++ b/article.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- <span class="glyphicon glyphicon-shopping-cart"></span> -->
 <html lang="fr">
 <head>
 	<meta charset="utf-8" />
-	<title>Nom provisoire</title>
+	<title>Emre Sener G4S1</title>
 	
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -35,7 +34,7 @@
 					<li><a href="panier.html">Mon panier</a></li>
 					<li class="recherche"><input type="text" placeholder="Rechercher"></li>
 				</ul>
-			</div><!--/.nav-collapse -->
+			</div>
 		</div>
 	</nav>
 	
@@ -46,15 +45,14 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 article-presentation">
 				<h3 class="article-intitule">Porsche 911 Carrera S (991) 2014</h3>
-				<img class="img-responsive article-panier" src="Images/Panier.png" alt="Panier"/>
+				<button type="button" class="btn btn-dark article-panier">Ajouter</button>
 				<img class="img-responsive article-img" src="Images/Porsche.jpg" alt="Porsche 911 Carrera S"/>
 				<p class="article-description">
 					L'icône de la voiture de sport de septième génération, entièrement
 					repensée, passe au premier plan avec sa silhouette élancée et allongée,
 					ses contours fascinants et ses fonctionnalités conçues avec précision. 
-					Pourtant, sous tous les angles, il s’agit indéniablement d’une 911, 
-					fidèle à la philosophie de la Porsche 911 Carrera, qui est celle de 
-					l’évolution et non de la révolution.
+					Pourtant, sous tous les angles, il s’agit bien d’une 911, 
+					fidèle à la philosophie de la Porsche 911 Carrera.
 				</p>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 article-specification">			
