--- a/panier.html
+++ b/panier.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8" />
-	<title>Nom provisoire</title>
+	<title>Emre Sener G4S1</title>
 	
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -33,7 +33,7 @@
 					<li><a href="panier.html">Mon panier</a></li>
 					<li class="recherche"><input type="text" placeholder="Rechercher"></li>
 				</ul>
-			</div><!--/.nav-collapse -->
+			</div>
 		</div>
 	</nav>
 	
@@ -41,13 +41,12 @@
 	
 	<!-- content: start -->
 	
-	<div class="container body-content">
-		<!-- <div class="row"> -->
-			<h3 class="titre">Mon panier :</h3>
+	<div class="container body-content panier-page">
+			<h3 class="panier-titre">Mon panier</h3>
 			<div class="panier-liste">
 				<div class="panier-article row">
-					<img class="panier-photo-article col-xs-12 col-sm-4 col-md-4 col-lg-4"src="Images/Ferrari-488-GTB.jpg" alt="Ferrari-488-GTB">
-					<table class="col-xs-8 col-sm-6 col-md-6 col-lg-6 panier-detail">
+					<img class="panier-photo-article col-xs-12 col-sm-4 col-md-4 col-lg-4" src="Images/Ferrari-488-GTB.jpg" alt="Ferrari-488-GTB">
+					<table class="col-xs-8 col-sm-5 col-md-5 col-lg-5 panier-detail">
 						<tr>
 							<th>Nom</th>
 							<td>Ferrari-488-GTB</td>
@@ -77,18 +76,19 @@
 							<td>Cuire beige</td>
 						</tr>
 					</table>
-					<form method="get" action="form.php" class="col-xs-4 col-sm-2 col-md-2 col-lg-2">
+					<form method="get" action="form.php" class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
 						<label>
-							Quantité : <input type="number" value="1">
+							Quantité <input type="number" value="1" min="1" max="9" class="panier-quantite">
 						</label>
+						<br>
 						<label>
-							Je garde l'article : <input type="checkbox" checked="checked">
+							Garder l'article <input type="checkbox" checked="checked">
 						</label>
 					</form>
 				</div>
 				<div class="panier-article row">
-					<img class="panier-photo-article col-xs-12 col-sm-4 col-md-4 col-lg-4"src="Images/Mercedes-Classe-G.jpg" alt="Mercedes-Classe-G">
-					<table class="col-xs-8 col-sm-6 col-md-6 col-lg-6 panier-detail">
+					<img class="panier-photo-article col-xs-12 col-sm-4 col-md-4 col-lg-4" src="Images/Mercedes-Classe-G.jpg" alt="Mercedes-Classe-G">
+					<table class="col-xs-8 col-sm-5 col-md-5 col-lg-5 panier-detail">
 						<tr>
 							<th>Nom</th>
 							<td>Mercedes-Classe-G</td>
@@ -118,23 +118,68 @@
 							<td>Cuire beige</td>
 						</tr>
 					</table>
-					<form method="get" action="form.php" class="col-xs-4 col-sm-2 col-md-2 col-lg-2">
+					<form method="get" action="form.php" class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
 						<label>
-							Quantité : <input type="number" value="2">
+							Quantité <input type="number" value="2" min="1" max="9" class="panier-quantite">
 						</label>
+						<br>
 						<label>
-							Je garde l'article : <input type="checkbox" checked="checked">
+							Garder l'article <input type="checkbox" checked="checked">
+						</label>
+					</form>
+				</div>
+				<div class="panier-article row">
+					<img class="panier-photo-article col-xs-12 col-sm-4 col-md-4 col-lg-4" src="Images/BMW-I8.jpg" alt="BMW-I8">
+					<table class="col-xs-8 col-sm-5 col-md-5 col-lg-5 panier-detail">
+						<tr>
+							<th>Nom</th>
+							<td>BMW-I8</td>
+						</tr>
+						<tr>
+							<th>Catégorie</th>
+							<td>Hybride</td>
+						</tr>
+						<tr>
+							<th>Origine</th>
+							<td>Allemagne</td>
+						</tr>
+						<tr>
+							<th>Prix</th>
+							<td>157 050 €</td>
+						</tr>
+						<tr>
+							<th>Année</th>
+							<td>2016</td>
+						</tr>
+						<tr>
+							<th>Couleur</th>
+							<td>Gris</td>
+						</tr>
+						<tr>
+							<th>Intérieur</th>
+							<td>Cuire noir</td>
+						</tr>
+					</table>
+					<form method="get" action="form.php" class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+						<label>
+							Quantité <input type="number" value="1" min="1" max="9" class="panier-quantite">
+						</label>
+						<br>
+						<label>
+							Garder l'article <input type="checkbox" checked="checked">
 						</label>
 					</form>
 				</div>
 			</div>
-		<!-- </div> -->
+			<form action="confirmation-commande.html">
+				<input type="submit" class="btn btn-secondary panier-commande" value="Passer la commande"/>
+			</form>
 	</div>
-</body>
-	
 	<!-- content: end -->
 	
 	<!-- footer: start -->
 	<footer>
 	</footer>
 	<!-- footer: end -->
+</body>
+</html>
